# MOSAIC

./: .gitignore  LICENSE  META_Llama_zeroshot.ipynb  META_helpers_colyra.py  dreamachine_llama.ipynb  grid_search_colyra.py  pyproject.toml  readme.md  requirements.txt  requirements_mac.txt  run_narval.sh  setup.py  test.txt  topic_analysis_DL.csv  topic_analysis_HS.csv
DATA/: DL_reflections_cleaned.csv  HS_reflections_cleaned.csv  HW_reflections_cleaned.csv  words_visualisation.ipynb
DATA2/: DL_reflections_cleaned.csv  DL_sentences.csv  HS_reflections_cleaned.csv  HS_sentences.csv  reflections_preprocessing.ipynb  words_visualisation.ipynb
EVAL/: conditions_similarity.ipynb
MPE/: app.py  mpe_llama.ipynb  mpe_mosaic.py  mpe_mosaic_api.ipynb  mpe_zeroshot_API.ipynb
MULTILINGUAL/: META_llama3_innerspeech.ipynb  MOSAIC_innerspeech.ipynb  innerspeech_prep.ipynb  multiling_helpers.py  multilingual.ipynb  prepare_data.ipynb
NOTEBOOKS/: META_llama3_DL.ipynb
RESULTS/: grid_search_results_DL_seed42_reduced_sentences.csv  grid_search_results_DL_seed42_sentences.csv  grid_search_results_HS_seed42_reduced_sentences.csv  grid_search_results_HS_seed42_sentences.csv  grid_search_results_HS_seed42_sentences_reduced.csv  topic_analysis_DL.csv  topic_analysis_HS.csv
RESULTSentences/: grid_search_results_DL_seed22.csv  grid_search_results_HS_seed22.csv
configs/: dreamachine.py  dreamachine2.py
preproc/: prepare_data.ipynb  preprocess_data_API.ipynb  preprocess_data_local.py  preprocessor.py
scripts/: app.py  dreamachine.ipynb  dreamachine2.0.ipynb  dreamachineHS.ipynb  (+5 more)
(+36 files in other folders)
